MyMiniJava/bison.output
Terminals unused in grammar

   VarDeclarations
   StatememtList
   SystemOutPrintln
   OperatorMore


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclarationList

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    3 VarDeclaration: Type Id ';'

    4 VarDeclarationList: VarDeclarationList VarDeclaration
    5                   | /* empty */

    6 ClassDeclaration: Class Id '{' VarDeclarationList MethodDeclarationList '}'
    7                 | Class Id Extends Id '{' VarDeclarationList MethodDeclarationList '}'

    8 ClassDeclarationList: ClassDeclaration ClassDeclarationList
    9                     | /* empty */

   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

   11 MethodDeclarationList: MethodDeclarationList MethodDeclaration
   12                      | /* empty */

   13 FormalList: Type Id FormalRestList
   14           | /* empty */

   15 FormalRestList: ',' Type Id FormalRestList
   16               | /* empty */

   17 Type: Int
   18     | Int '[' ']'
   19     | Bool
   20     | Id

   21 StatementList: Statement StatementList
   22              | /* empty */

   23 Statement: '{' StatementList '}'
   24          | Id OperatorEq Expr ';'
   25          | If '(' Expr ')' Statement Else Statement
   26          | While '(' Expr ')' Statement
   27          | Print '(' Expr ')' ';'
   28          | Id '[' Expr ']' OperatorEq Expr ';'

   29 Expr: Expr '*' Expr
   30     | Expr '+' Expr
   31     | Expr '/' Expr
   32     | Expr '-' Expr
   33     | '-' Expr
   34     | Expr '[' Expr ']'
   35     | Expr '.' Length
   36     | Expr '.' Id '(' ExprList ')'
   37     | Expr OperatorLess Expr
   38     | Expr OperatorAnd Expr
   39     | IntNum
   40     | FloatNum
   41     | True
   42     | False
   43     | Id
   44     | This
   45     | New Int '[' Expr ']'
   46     | New Id '(' ')'
   47     | '!' Expr
   48     | '(' Expr ')'

   49 ExprList: Expr ExprRest
   50         | /* empty */

   51 ExprRest: ',' Expr ExprRest
   52         | /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'(' (40) 2 10 25 26 27 36 46 48
')' (41) 2 10 25 26 27 36 46 48
'*' (42) 29
'+' (43) 30
',' (44) 15 51
'-' (45) 32 33
'.' (46) 35 36
'/' (47) 31
';' (59) 3 10 24 27 28
'[' (91) 2 18 28 34 45
']' (93) 2 18 28 34 45
'{' (123) 2 6 7 10 23
'}' (125) 2 6 7 10 23
error (256)
VarDeclarations (258)
StatememtList (259)
Id (260) 2 3 6 7 10 13 15 20 24 28 36 43 46
IntNum (261) 39
FloatNum (262) 40
If (263) 25
Else (264) 25
While (265) 26
Main (266) 2
Class (267) 2 6 7
Public (268) 2 10
Static (269) 2
Return (270) 10
Extends (271) 7
Int (272) 17 18 45
Bool (273) 19
Void (274) 2
String (275) 2
Print (276) 27
True (277) 41
False (278) 42
This (279) 44
New (280) 45 46
Length (281) 35
SystemOutPrintln (282)
OperatorEq (283) 24 28
OperatorAnd (284) 38
OperatorMore (285)
OperatorLess (286) 37
UMINUS (287)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Program (48)
    on left: 1, on right: 0
MainClass (49)
    on left: 2, on right: 1
VarDeclaration (50)
    on left: 3, on right: 4
VarDeclarationList (51)
    on left: 4 5, on right: 4 6 7 10
ClassDeclaration (52)
    on left: 6 7, on right: 8
ClassDeclarationList (53)
    on left: 8 9, on right: 1 8
MethodDeclaration (54)
    on left: 10, on right: 11
MethodDeclarationList (55)
    on left: 11 12, on right: 6 7 11
FormalList (56)
    on left: 13 14, on right: 10
FormalRestList (57)
    on left: 15 16, on right: 13 15
Type (58)
    on left: 17 18 19 20, on right: 3 10 13 15
StatementList (59)
    on left: 21 22, on right: 10 21 23
Statement (60)
    on left: 23 24 25 26 27 28, on right: 2 21 25 26
Expr (61)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48, on right: 10 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    45 47 48 49 51
ExprList (62)
    on left: 49 50, on right: 36
ExprRest (63)
    on left: 51 52, on right: 49 51


State 0

    0 $accept: . Program $end

    Class  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: Class . Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    Id  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass . ClassDeclarationList

    Class  shift, and go to state 6

    $default  reduce using rule 9 (ClassDeclarationList)

    ClassDeclaration      go to state 7
    ClassDeclarationList  go to state 8


State 4

    2 MainClass: Class Id . '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    6 ClassDeclaration: Class . Id '{' VarDeclarationList MethodDeclarationList '}'
    7                 | Class . Id Extends Id '{' VarDeclarationList MethodDeclarationList '}'

    Id  shift, and go to state 10


State 7

    8 ClassDeclarationList: ClassDeclaration . ClassDeclarationList

    Class  shift, and go to state 6

    $default  reduce using rule 9 (ClassDeclarationList)

    ClassDeclaration      go to state 7
    ClassDeclarationList  go to state 11


State 8

    1 Program: MainClass ClassDeclarationList .

    $default  reduce using rule 1 (Program)


State 9

    2 MainClass: Class Id '{' . Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    Public  shift, and go to state 12


State 10

    6 ClassDeclaration: Class Id . '{' VarDeclarationList MethodDeclarationList '}'
    7                 | Class Id . Extends Id '{' VarDeclarationList MethodDeclarationList '}'

    Extends  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    8 ClassDeclarationList: ClassDeclaration ClassDeclarationList .

    $default  reduce using rule 8 (ClassDeclarationList)


State 12

    2 MainClass: Class Id '{' Public . Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    Static  shift, and go to state 15


State 13

    7 ClassDeclaration: Class Id Extends . Id '{' VarDeclarationList MethodDeclarationList '}'

    Id  shift, and go to state 16


State 14

    6 ClassDeclaration: Class Id '{' . VarDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 5 (VarDeclarationList)

    VarDeclarationList  go to state 17


State 15

    2 MainClass: Class Id '{' Public Static . Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    Void  shift, and go to state 18


State 16

    7 ClassDeclaration: Class Id Extends Id . '{' VarDeclarationList MethodDeclarationList '}'

    '{'  shift, and go to state 19


State 17

    4 VarDeclarationList: VarDeclarationList . VarDeclaration
    6 ClassDeclaration: Class Id '{' VarDeclarationList . MethodDeclarationList '}'

    Id    shift, and go to state 20
    Int   shift, and go to state 21
    Bool  shift, and go to state 22

    $default  reduce using rule 12 (MethodDeclarationList)

    VarDeclaration         go to state 23
    MethodDeclarationList  go to state 24
    Type                   go to state 25


State 18

    2 MainClass: Class Id '{' Public Static Void . Main '(' String '[' ']' Id ')' '{' Statement '}' '}'

    Main  shift, and go to state 26


State 19

    7 ClassDeclaration: Class Id Extends Id '{' . VarDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 5 (VarDeclarationList)

    VarDeclarationList  go to state 27


State 20

   20 Type: Id .

    $default  reduce using rule 20 (Type)


State 21

   17 Type: Int .
   18     | Int . '[' ']'

    '['  shift, and go to state 28

    $default  reduce using rule 17 (Type)


State 22

   19 Type: Bool .

    $default  reduce using rule 19 (Type)


State 23

    4 VarDeclarationList: VarDeclarationList VarDeclaration .

    $default  reduce using rule 4 (VarDeclarationList)


State 24

    6 ClassDeclaration: Class Id '{' VarDeclarationList MethodDeclarationList . '}'
   11 MethodDeclarationList: MethodDeclarationList . MethodDeclaration

    Public  shift, and go to state 29
    '}'     shift, and go to state 30

    MethodDeclaration  go to state 31


State 25

    3 VarDeclaration: Type . Id ';'

    Id  shift, and go to state 32


State 26

    2 MainClass: Class Id '{' Public Static Void Main . '(' String '[' ']' Id ')' '{' Statement '}' '}'

    '('  shift, and go to state 33


State 27

    4 VarDeclarationList: VarDeclarationList . VarDeclaration
    7 ClassDeclaration: Class Id Extends Id '{' VarDeclarationList . MethodDeclarationList '}'

    Id    shift, and go to state 20
    Int   shift, and go to state 21
    Bool  shift, and go to state 22

    $default  reduce using rule 12 (MethodDeclarationList)

    VarDeclaration         go to state 23
    MethodDeclarationList  go to state 34
    Type                   go to state 25


State 28

   18 Type: Int '[' . ']'

    ']'  shift, and go to state 35


State 29

   10 MethodDeclaration: Public . Type Id '(' FormalList ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

    Id    shift, and go to state 20
    Int   shift, and go to state 21
    Bool  shift, and go to state 22

    Type  go to state 36


State 30

    6 ClassDeclaration: Class Id '{' VarDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 6 (ClassDeclaration)


State 31

   11 MethodDeclarationList: MethodDeclarationList MethodDeclaration .

    $default  reduce using rule 11 (MethodDeclarationList)


State 32

    3 VarDeclaration: Type Id . ';'

    ';'  shift, and go to state 37


State 33

    2 MainClass: Class Id '{' Public Static Void Main '(' . String '[' ']' Id ')' '{' Statement '}' '}'

    String  shift, and go to state 38


State 34

    7 ClassDeclaration: Class Id Extends Id '{' VarDeclarationList MethodDeclarationList . '}'
   11 MethodDeclarationList: MethodDeclarationList . MethodDeclaration

    Public  shift, and go to state 29
    '}'     shift, and go to state 39

    MethodDeclaration  go to state 31


State 35

   18 Type: Int '[' ']' .

    $default  reduce using rule 18 (Type)


State 36

   10 MethodDeclaration: Public Type . Id '(' FormalList ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

    Id  shift, and go to state 40


State 37

    3 VarDeclaration: Type Id ';' .

    $default  reduce using rule 3 (VarDeclaration)


State 38

    2 MainClass: Class Id '{' Public Static Void Main '(' String . '[' ']' Id ')' '{' Statement '}' '}'

    '['  shift, and go to state 41


State 39

    7 ClassDeclaration: Class Id Extends Id '{' VarDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 7 (ClassDeclaration)


State 40

   10 MethodDeclaration: Public Type Id . '(' FormalList ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

    '('  shift, and go to state 42


State 41

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' . ']' Id ')' '{' Statement '}' '}'

    ']'  shift, and go to state 43


State 42

   10 MethodDeclaration: Public Type Id '(' . FormalList ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

    Id    shift, and go to state 20
    Int   shift, and go to state 21
    Bool  shift, and go to state 22

    $default  reduce using rule 14 (FormalList)

    FormalList  go to state 44
    Type        go to state 45


State 43

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' . Id ')' '{' Statement '}' '}'

    Id  shift, and go to state 46


State 44

   10 MethodDeclaration: Public Type Id '(' FormalList . ')' '{' VarDeclarationList StatementList Return Expr ';' '}'

    ')'  shift, and go to state 47


State 45

   13 FormalList: Type . Id FormalRestList

    Id  shift, and go to state 48


State 46

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 49


State 47

   10 MethodDeclaration: Public Type Id '(' FormalList ')' . '{' VarDeclarationList StatementList Return Expr ';' '}'

    '{'  shift, and go to state 50


State 48

   13 FormalList: Type Id . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 16 (FormalRestList)

    FormalRestList  go to state 52


State 49

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 53


State 50

   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' . VarDeclarationList StatementList Return Expr ';' '}'

    $default  reduce using rule 5 (VarDeclarationList)

    VarDeclarationList  go to state 54


State 51

   15 FormalRestList: ',' . Type Id FormalRestList

    Id    shift, and go to state 20
    Int   shift, and go to state 21
    Bool  shift, and go to state 22

    Type  go to state 55


State 52

   13 FormalList: Type Id FormalRestList .

    $default  reduce using rule 13 (FormalList)


State 53

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' . Statement '}' '}'

    Id     shift, and go to state 56
    If     shift, and go to state 57
    While  shift, and go to state 58
    Print  shift, and go to state 59
    '{'    shift, and go to state 60

    Statement  go to state 61


State 54

    4 VarDeclarationList: VarDeclarationList . VarDeclaration
   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' VarDeclarationList . StatementList Return Expr ';' '}'

    Id     shift, and go to state 62
    If     shift, and go to state 57
    While  shift, and go to state 58
    Int    shift, and go to state 21
    Bool   shift, and go to state 22
    Print  shift, and go to state 59
    '{'    shift, and go to state 60

    $default  reduce using rule 22 (StatementList)

    VarDeclaration  go to state 23
    Type            go to state 25
    StatementList   go to state 63
    Statement       go to state 64


State 55

   15 FormalRestList: ',' Type . Id FormalRestList

    Id  shift, and go to state 65


State 56

   24 Statement: Id . OperatorEq Expr ';'
   28          | Id . '[' Expr ']' OperatorEq Expr ';'

    OperatorEq  shift, and go to state 66
    '['         shift, and go to state 67


State 57

   25 Statement: If . '(' Expr ')' Statement Else Statement

    '('  shift, and go to state 68


State 58

   26 Statement: While . '(' Expr ')' Statement

    '('  shift, and go to state 69


State 59

   27 Statement: Print . '(' Expr ')' ';'

    '('  shift, and go to state 70


State 60

   23 Statement: '{' . StatementList '}'

    Id     shift, and go to state 56
    If     shift, and go to state 57
    While  shift, and go to state 58
    Print  shift, and go to state 59
    '{'    shift, and go to state 60

    $default  reduce using rule 22 (StatementList)

    StatementList  go to state 71
    Statement      go to state 64


State 61

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement . '}' '}'

    '}'  shift, and go to state 72


State 62

   20 Type: Id .
   24 Statement: Id . OperatorEq Expr ';'
   28          | Id . '[' Expr ']' OperatorEq Expr ';'

    OperatorEq  shift, and go to state 66
    '['         shift, and go to state 67

    $default  reduce using rule 20 (Type)


State 63

   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' VarDeclarationList StatementList . Return Expr ';' '}'

    Return  shift, and go to state 73


State 64

   21 StatementList: Statement . StatementList

    Id     shift, and go to state 56
    If     shift, and go to state 57
    While  shift, and go to state 58
    Print  shift, and go to state 59
    '{'    shift, and go to state 60

    $default  reduce using rule 22 (StatementList)

    StatementList  go to state 74
    Statement      go to state 64


State 65

   15 FormalRestList: ',' Type Id . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 16 (FormalRestList)

    FormalRestList  go to state 75


State 66

   24 Statement: Id OperatorEq . Expr ';'

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 86


State 67

   28 Statement: Id '[' . Expr ']' OperatorEq Expr ';'

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 87


State 68

   25 Statement: If '(' . Expr ')' Statement Else Statement

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 88


State 69

   26 Statement: While '(' . Expr ')' Statement

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 89


State 70

   27 Statement: Print '(' . Expr ')' ';'

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 90


State 71

   23 Statement: '{' StatementList . '}'

    '}'  shift, and go to state 91


State 72

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' . '}'

    '}'  shift, and go to state 92


State 73

   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' VarDeclarationList StatementList Return . Expr ';' '}'

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 93


State 74

   21 StatementList: Statement StatementList .

    $default  reduce using rule 21 (StatementList)


State 75

   15 FormalRestList: ',' Type Id FormalRestList .

    $default  reduce using rule 15 (FormalRestList)


State 76

   43 Expr: Id .

    $default  reduce using rule 43 (Expr)


State 77

   39 Expr: IntNum .

    $default  reduce using rule 39 (Expr)


State 78

   40 Expr: FloatNum .

    $default  reduce using rule 40 (Expr)


State 79

   41 Expr: True .

    $default  reduce using rule 41 (Expr)


State 80

   42 Expr: False .

    $default  reduce using rule 42 (Expr)


State 81

   44 Expr: This .

    $default  reduce using rule 44 (Expr)


State 82

   45 Expr: New . Int '[' Expr ']'
   46     | New . Id '(' ')'

    Id   shift, and go to state 94
    Int  shift, and go to state 95


State 83

   33 Expr: '-' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 96


State 84

   47 Expr: '!' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 97


State 85

   48 Expr: '(' . Expr ')'

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 98


State 86

   24 Statement: Id OperatorEq Expr . ';'
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ';'           shift, and go to state 107


State 87

   28 Statement: Id '[' Expr . ']' OperatorEq Expr ';'
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ']'           shift, and go to state 108


State 88

   25 Statement: If '(' Expr . ')' Statement Else Statement
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ')'           shift, and go to state 109


State 89

   26 Statement: While '(' Expr . ')' Statement
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ')'           shift, and go to state 110


State 90

   27 Statement: Print '(' Expr . ')' ';'
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ')'           shift, and go to state 111


State 91

   23 Statement: '{' StatementList '}' .

    $default  reduce using rule 23 (Statement)


State 92

    2 MainClass: Class Id '{' Public Static Void Main '(' String '[' ']' Id ')' '{' Statement '}' '}' .

    $default  reduce using rule 2 (MainClass)


State 93

   10 MethodDeclaration: Public Type Id '(' FormalList ')' '{' VarDeclarationList StatementList Return Expr . ';' '}'
   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ';'           shift, and go to state 112


State 94

   46 Expr: New Id . '(' ')'

    '('  shift, and go to state 113


State 95

   45 Expr: New Int . '[' Expr ']'

    '['  shift, and go to state 114


State 96

   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   33     | '-' Expr .
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr

    '.'  shift, and go to state 105
    '['  shift, and go to state 106

    $default  reduce using rule 33 (Expr)


State 97

   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr
   47     | '!' Expr .

    '.'  shift, and go to state 105
    '['  shift, and go to state 106

    $default  reduce using rule 47 (Expr)


State 98

   29 Expr: Expr . '*' Expr
   30     | Expr . '+' Expr
   31     | Expr . '/' Expr
   32     | Expr . '-' Expr
   34     | Expr . '[' Expr ']'
   35     | Expr . '.' Length
   36     | Expr . '.' Id '(' ExprList ')'
   37     | Expr . OperatorLess Expr
   38     | Expr . OperatorAnd Expr
   48     | '(' Expr . ')'

    OperatorAnd   shift, and go to state 99
    OperatorLess  shift, and go to state 100
    '+'           shift, and go to state 101
    '-'           shift, and go to state 102
    '*'           shift, and go to state 103
    '/'           shift, and go to state 104
    '.'           shift, and go to state 105
    '['           shift, and go to state 106
    ')'           shift, and go to state 115


State 99

   38 Expr: Expr OperatorAnd . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 116


State 100

   37 Expr: Expr OperatorLess . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 117


State 101

   30 Expr: Expr '+' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 118


State 102

   32 Expr: Expr '-' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 119


State 103

   29 Expr: Expr '*' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 120


State 104

   31 Expr: Expr '/' . Expr

    Id        shift, and go to state 76
    IntNum    shift, and go to state 77
    FloatNum  shift, and go to state 78
    True      shift, and go to state 79
    False     shift, and go to state 80
    This      shift, and go to state 81
    New       shift, and go to state 82
    '-'       shift, and go to state 83
    '!'       shift, and go to state 84
    '('       shift, and go to state 85

    Expr  go to state 121


State 105

   35 Expr: Expr '.' . Length
   36     | Expr '.' . Id '(' ExprList ')'
